# ut

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ut/: Algorithms.hpp  Bit.hpp  Color.hpp  Exception.hpp  Fmt.hpp  Gulp.hpp  Int.hpp  Rect.hpp  Region.hpp  StringView.hpp  Time.hpp  algo.hpp  binary_types.hpp  bit.hpp  bit_exp.hpp  check.hpp  color.hpp  container.hpp  int.hpp  log.hpp  log2.hpp  math.hpp  optional.hpp  options.hpp  random.hpp  raw_term.hpp  region.hpp  res.hpp  src_pack.hpp  string.hpp  term.hpp  test.hpp  time.hpp  ut.hpp  ut.hpp.in
include/ut/algo/: base64.hpp  comfid.hpp  crc32.hpp  glob.hpp  gulp.hpp  hash.hpp  maybe.hpp  optional_range_support.hpp
include/ut/algorithm/: Base64.hpp  Hash.hpp  StringMetric.hpp
include/ut/container/: ordered_vector.hpp  sorted_vector.hpp  stack_array.hpp  vector_array.hpp
include/ut/func/: Delegate.hpp  delegate.hpp
include/ut/math/: Vector.cpp  Vector2D.hpp  Vector3D.hpp  Vector4D.hpp  VectorND.hpp  matrix4D.hpp  matrixND.hpp  psize.hpp  real.hpp  rect.hpp  vector2D.hpp  vector3D.hpp  vector4D.hpp  vectorND.hpp  xywh.hpp
include/ut/string/: builder.hpp  fmt.hpp  metric.hpp  printer.hpp  view.hpp  view_impl_split.hpp  view_istream.hpp  view_split.hpp
include/ut/term/: escapes.hpp  progress.hpp  rawterm.hpp  shell.hpp  spinner.hpp  spinners.hpp  table.hpp  tui.hpp
src/: CMakeLists.txt  Color.cpp  File.cpp  Fmt.cpp  Vector.cpp  color.cpp  color_oklch.cpp  comfid.cpp  hsluv.c  log.cpp  math.cpp  random.cpp  res.cpp  src_pack.cpp  term.cpp  test.cpp
src/term/: progress.cpp  rawterm.cpp  shell.cpp  spinner.cpp  table.cpp  tui.cpp  tui_table.cpp  tui_table.hpp
test/: CMakeLists.txt  doctest.h  gc.cpp  gc.hpp  main.cpp  memory.hpp  scratch.txt  tests.cpp  ut_test.cpp
